<resources>
    <string name="app_name">Gestion Livraison</string>
    <string name="email">Email</string>
    <string name="identifier">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="login">Login</string>
    <string name="connection">Connexion</string>
    <string name="title_activity_new_delivery">NewDeliveryActivity</string>
    <string name="deliveries">Deliveries</string>
    <string name="new_delivery">New delivery</string>
    <string name="userInfo">My information</string>
    <string name="lblComments">Commentaires</string>
    <string name="lblDeliveryAddress">Adresse destination</string>
    <string name="lblClient">Client</string>
    <string name="lblDeliveryReference">Destinateur</string>
    <string name="lblTakePicture">Prendre une photo</string>
    <string name="lblStartDeliveryProof">Preuve de receiption</string>
    <string name="lblSave">Enregistrer</string>
    <string name="lblCancel">Annuler</string>
    <string name="lblStartDate"><![CDATA[Date & Heure]]></string>
    <string name="lblBadConnexionInfo">Verifier les informations de connexion</string>

    <string-array name="clients">
        <item>ECOBANK</item>
        <item>BRAKINA</item>
        <item>BIB</item>
        <item>UEMOA</item>
    </string-array>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lblSender">Envoyeur:</string>
    <string name="lblReceiver">Receveur:</string>
</resources>
