<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/new_delivery"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="com.example.fabrice.gestionlivraison.fragments.NewDeliveryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Date and hour -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lblStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:id="@+id/lblStartDate"
                android:clickable="false"
                android:focusable="false"
                android:textIsSelectable="false"
                android:inputType="none"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtStartDate"
                android:inputType="date"
                android:editable="false"/>

            <TextView
                android:text="@string/lblClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblSender"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spSender"
                android:entries="@array/clients"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/lblDeliveryReference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblReceiverReference"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtReceiverReference"/>

            <TextView
                android:text="@string/lblDeliveryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblReceiverAddress"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtReceiverAddress"/>

            <TextView
                android:text="@string/lblComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblStartComments"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/txtStartComments"/>

            <TextView
                android:text="@string/lblStartDeliveryProof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblProof"
                android:layout_marginTop="10dp"/>

            <Button
                android:text="@string/lblTakePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnProof"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/test_view_black_border"
                android:layout_marginTop="10dp"
                android:id="@+id/imgStartDeliveryProof"
                android:contentDescription=""
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp">

                <Button
                    android:text="@string/lblSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSave"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <Button
                    android:text="@string/lblCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCancel"
                    android:layout_weight="0.87"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
