<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_new_delivery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fabrice.gestionlivraison.activities.NewDeliveryActivity">


    <!--bottom bar-->

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/colorBlack"
        app:itemTextColor="@color/colorWhite"
        app:menu="@menu/bottom_nav_bar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <!-- Date and hour -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lblStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:id="@+id/lblStartDate"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtStartDate"
                android:editable="false"/>

            <TextView
                android:text="@string/lblClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblClient"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spClient"
                android:entries="@array/clients"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/lblDeliveryReference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblDeliveryReference"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtDeliveryReference"/>

            <TextView
                android:text="@string/lblDeliveryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblDeliveryAddress"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtDeliveryAddress"/>

            <TextView
                android:text="@string/lblComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblComments"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/txtComments"/>

            <TextView
                android:text="@string/lblStartDeliveryProof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblProof"
                android:layout_marginTop="10dp"/>

            <Button
                android:text="@string/lblTakePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnProof"
                android:onClick="takePicture"/>

            <ImageView
                android:layout_width="340dp"
                android:layout_height="65dp"
                app:srcCompat="@drawable/test_view_black_border"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:id="@+id/imgStartDeliveryProof" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp">

                <Button
                    android:text="@string/lblSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSave"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"/>

                <Button
                    android:text="@string/lblCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCancel"
                    android:layout_weight="0.87"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
